	`twittering-image-data-table' here.
	(twittering-format-status): Don't define `profile-image' as
	flet'ed function for the specifier "%i".

	* twittering-mode.el (twittering-get-tweets): Don't call
	`twittering-retrieve-image' here.
	 
	* twittering-mode.el (twittering-retrieve-image): Bind
	`url-show-status' locally to inhibit showing a progress message.
	(twittering-tinyurl-get): Likewise.

2010-02-22  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-atom-xmltree-to-status-datum):
	Call `twittering-decode-html-entities' to decode entities
	properly.

	* twittering-mode.el (twittering-get-error-message): Change the
	first argument to `buffer' from `proc'.
	(twittering-http-get-default-sentinel): Adjust callers.
	(twittering-http-get-list-index-sentinel): Likewise.
	(twittering-http-post-default-sentinel): Likewise.

2010-02-20  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-current-timeline-spec): Check
	`spec-string' is a string before calling
	`twittering-string-to-timeline-spec'.
	(twittering-get-and-render-timeline): Likewise.
	(twittering-read-timeline-spec-with-completion): Likewise.

	* twittering-mode.el (twittering-read-timeline-spec-with-completion):
	Return nil explicitly when `twittering-string-to-timeline-spec'
	return nil.

	* twittering-mode.el (twittering-retrieve-image): Use `unless'
	instead of `when'.
	(twittering-icon-mode): Likewise.
	(twittering-scroll-mode): Likewise.
	(twittering-jojo-mode): Likewise.
	(twittering-toggle-reverse-mode): Likewise.

2010-02-19  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-delete-ca-cert-file): New defun.
	(twittering-ensure-ca-cert): Add it as a hook into
	`kill-emacs-hook'.

	* twittering-mode.el (twittering-get-error-message): New defun to
	pickup an error message from a xmltree.
	(twittering-http-get-default-sentinel): Use it.
	(twittering-http-get-list-index-sentinel): Likewise.